.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule__c/Availability_Schedule__c.object-meta.xml
<CustomObject>
    <label>Availability Schedule</label>
    <nameField>
        <displayFormat>AS-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Availability Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>