.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Availability Schedules</relationshipLabel>
    <relationshipName>Availability_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>